; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_spcp8x5.c_spcp8x5_set_ctrlLine.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_spcp8x5.c_spcp8x5_set_ctrlLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }

@SPCP825_007_TYPE = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@SET_UART_STATUS_TYPE = common dso_local global i32 0, align 4
@SET_UART_STATUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"usb_control_msg return %#x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_device*, i16, i32)* @spcp8x5_set_ctrlLine to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spcp8x5_set_ctrlLine(%struct.usb_device* %0, i16 zeroext %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.usb_device*, align 8
  %6 = alloca i16, align 2
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i16, align 2
  store %struct.usb_device* %0, %struct.usb_device** %5, align 8
  store i16 %1, i16* %6, align 2
  store i32 %2, i32* %7, align 4
  store i16 0, i16* %9, align 2
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @SPCP825_007_TYPE, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32, i32* @EPERM, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %4, align 4
  br label %34

16:                                               ; preds = %3
  %17 = load i16, i16* %6, align 2
  store i16 %17, i16* %9, align 2
  %18 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %19 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %20 = call i32 @usb_sndctrlpipe(%struct.usb_device* %19, i32 0)
  %21 = load i32, i32* @SET_UART_STATUS_TYPE, align 4
  %22 = load i32, i32* @SET_UART_STATUS, align 4
  %23 = load i16, i16* %9, align 2
  %24 = call i32 @usb_control_msg(%struct.usb_device* %18, i32 %20, i32 %21, i32 %22, i16 zeroext %23, i32 4, i32* null, i32 0, i32 100)
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %16
  %28 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %29 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %28, i32 0, i32 0
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @dev_dbg(i32* %29, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %27, %16
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %32, %13
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @usb_control_msg(%struct.usb_device*, i32, i32, i32, i16 zeroext, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(%struct.usb_device*, i32) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
